--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.8",
+    "expo": "~51.0.38",
     "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.5",
+    "expo-font": "~12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
-    "expo-splash-screen": "^0.27.5",
+    "expo-splash-screen": "^0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -34,11 +34,12 @@
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "^1.18.0",
+    "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.4.5",
     "react-native-web": "~0.19.10"
   },
